syntax = "proto3";

package project.planton.provider.gcp.gcpgkenodepool.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/gcp/gcpgkenodepool/v1/spec.proto";
import "project/planton/provider/gcp/gcpgkenodepool/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//gcp-gke-node-pool
message GcpGkeNodePool {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'gcp.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'GcpGkeNodePool'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  GcpGkeNodePoolSpec spec = 4 [(buf.validate.field).required = true];

  //status
  GcpGkeNodePoolStatus status = 5;
}

//gcp-gke-node-pool status.
message GcpGkeNodePoolStatus {
  //stack-outputs
  GcpGkeNodePoolStackOutputs outputs = 1;
}
