syntax = "proto3";

package project.planton.provider.gcp.gcpgkenodepool.v1;

// Outputs produced after creating/updating a GKE Node Pool.
message GcpGkeNodePoolStackOutputs {
  // Name of the node pool in GKE (usually same as metadata.name of the resource).
  string nodePoolName = 1;

  // URLs of the Compute Instance Group(s) backing this node pool.
  // For regional clusters, there is one managed instance group per zone.
  repeated string instanceGroupUrls = 2;

  // Effective minimum and maximum size of the node pool (for autoscaling).
  uint32 minNodes = 3;
  uint32 maxNodes = 4;

  // Current number of nodes in this pool.
  uint32 currentNodeCount = 5;

  // (Additional outputs like autoscaler status or errors can be added as needed.)
}
